crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__base__templatetags__phone_format.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/base/templatetags/phone_format.py
---
tag_rules: {}
filter_arities:
  "src.pretix.base.templatetags.phone_format::filter::phone_format":
    expects_arg: true
    arg_optional: true
block_specs: {}
