crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__base__templatetags__rich_text.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/base/templatetags/rich_text.py
---
tag_rules: {}
filter_arities:
  "src.pretix.base.templatetags.rich_text::filter::rich_text":
    expects_arg: false
    arg_optional: false
  "src.pretix.base.templatetags.rich_text::filter::rich_text_snippet":
    expects_arg: false
    arg_optional: false
block_specs: {}
