crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__base__templatetags__safelink.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/base/templatetags/safelink.py
---
tag_rules:
  "src.pretix.base.templatetags.safelink::tag::answer_token":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: request
        required: true
        kind: Variable
        position: 0
      - name: answer
        required: true
        kind: Variable
        position: 1
    supports_as_var: true
  "src.pretix.base.templatetags.safelink::tag::safelink":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: url
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities: {}
block_specs: {}
