crates/djls-python/tests/snapshots/corpus__extraction_snapshots@repos__pretix__src__pretix__base__templatetags__textbubble.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/repos/pretix/src/pretix/base/templatetags/textbubble.py
---
tag_rules:
  "src.pretix.base.templatetags.textbubble::tag::endtextbubble":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "src.pretix.base.templatetags.textbubble::tag::textbubble":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: type
        required: true
        kind: Variable
        position: 0
      - name: args
        required: false
        kind: VarArgs
        position: 1
    supports_as_var: true
filter_arities: {}
block_specs: {}
